<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">




        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tax_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="@string/line1"/>
            <TextView
                android:id="@+id/text_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textColor="#000000"
                android:text="@string/line2"/>

            <TextView
                android:id="@+id/text_text3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="#000000"
                android:text="About TaxManager.in"/>

            <TextView
                android:id="@+id/text_text4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:textColor="#000000"
                android:text="@string/line3"/>
            <TextView
                android:id="@+id/text_text5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="8dp"
                android:textColor="#000000"
                android:text="@string/line4"/>
            <TextView
                android:id="@+id/text_text6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="8dp"
                android:textColor="#000000"
                android:text="@string/line5"/>
            <TextView
                android:id="@+id/text_text7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="8dp"
                android:textColor="#000000"
                android:text="@string/line6"/>
            <TextView
                android:id="@+id/text_text8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="8dp"
                android:textColor="#000000"
                android:text="@string/line7"/>
            <TextView
                android:id="@+id/text_text9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="8dp"
                android:textColor="#000000"
                android:text="@string/line8"/>


            <TextView
                android:id="@+id/text_text10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="#000000"
                android:text="TaxManager App Features"/>

            <TextView
                android:id="@+id/text_text11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:textColor="#000000"
                android:text="@string/line9"/>
            <TextView
                android:id="@+id/text_text12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="8dp"
                android:textColor="#000000"
                android:text="@string/line10"/>
            <TextView
                android:id="@+id/text_text13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="8dp"
                android:textColor="#000000"
                android:text="@string/line11"/>
            <TextView
                android:id="@+id/text_text14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="8dp"
                android:textColor="#000000"
                android:text="@string/line12"/>
            <TextView
                android:id="@+id/text_text15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="8dp"
                android:textColor="#000000"
                android:text="@string/line13"/>
            <TextView
                android:id="@+id/text_text16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="#000000"
                android:text="Support"/>
            <TextView
                android:id="@+id/text_text17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="8dp"
                android:textColor="#000000"
                android:text="@string/line14"/>
            <TextView
                android:id="@+id/text_text18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="8dp"
                android:textColor="#000000"
                android:text="@string/line15"/>
            <TextView
                android:id="@+id/text_text19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="8dp"
                android:textColor="#000000"
                android:layout_marginBottom="20dp"
                android:text="@string/line16"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
